--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
 # -*- coding: utf-8 -*-
 appdirs
 colorlog
+docker
 imageio
 luigi>= 2.8.11
-open3d== 0.9.0.0
+open3d>= 0.9.0.0  # open3d== 0.9.0.0
 opencv-python== 4.2.0.34
 pybind11
 pyopencl
 pywavefront
-scikit-image== 0.16.2
+scikit-image  # scikit-image== 0.16.2
 scikit-learn
 toml
 tqdm
 trimesh
-pyopencl
-docker
