--- a/config/original_pipe_0.toml
+++ b/config/original_pipe_0.toml
@@ -19,13 +19,12 @@ calibration_scan_id = "calib_scan_shortpath"
 scan_id = "models"
 
 [Masks]
-upstream_task = "ImagesFilesetExists"
-#upstream_task = "Undistorted"  # other option
+upstream_task = "Undistorted"
 type = "linear"
 parameters = "[0,1,0]"
 dilation = 5
 binarize = true
-threshold = 0.2
+threshold = 0.3
 
 [Voxels]
 upstream_mask = "Masks"
