--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ colorlog
 docker
 imageio
 luigi>= 2.8.11
+networkx
 open3d>= 0.9.0.0  # open3d== 0.9.0.0
 opencv-python== 4.2.0.34
 pybind11
 pyopencl
 # pywavefront  # Changed to optional as only used in romiscan/romiscan/tasks/evaluation.py
+scikit-image
 toml
 tqdm
 # trimesh  # Changed to optional as only used once in romiscan/romiscan/tasks/evaluation.py
