--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ networkx
 open3d>= 0.9.0.0  # open3d== 0.9.0.0
 opencv-python== 4.2.0.34
 pybind11
-pyopencl
+pyopencl==2020.2.2
 scikit-image
 toml
 tqdm
