Add mesh post filtering options for TriangleMesh

--- a/config/geom_pipe_real.toml
+++ b/config/geom_pipe_real.toml
@@ -44,6 +44,8 @@ level_set_value = 0.0
 
 [TriangleMesh]
 upstream_task = "PointCloud"
+library = "open3d"
+filtering = "most connected triangles"  # ["", "most connected triangles", "largest connected triangles", "dbscan point-cloud"]
 
 [CurveSkeleton]
 upstream_task = "TriangleMesh"
