--- a/config/ml_pipe_virtual.toml
+++ b/config/ml_pipe_virtual.toml
@@ -1,36 +1,15 @@
-[Colmap]
-upstream_task = "ImagesFilesetExists"
-matcher = "exhaustive"
-compute_dense = false
-align_pcd = true
-calibration_scan_id = ""
-
-[Colmap.cli_args.feature_extractor]
-"--ImageReader.single_camera" = "1" # in colmap default to 0
-
-[Colmap.cli_args.model_aligner]
-"--robust_alignment_max_error" = "10"
-
-[Colmap.bounding_box]  # default to None
-x = [250, 550]
-y = [250, 550]
-z = [-200, 200]
-
-[Undistorted]
-upstream_task = "ImagesFilesetExists"
-
 [ModelFileset]
 scan_id = "models"
 
 [Segmentation2D]
-upstream_task = "Undistorted"
+upstream_task = "ImagesFilesetExists"
 model_fileset = "ModelFileset"
-model_id = "Resnetdataset_gl_png_896_896_epoch50" # no default value
-query = "{\"channel\":\"rgb\"}" # default {}
+model_id = "Resnet_896_896_epoch50"  # no default value
+query = "{\"channel\":\"rgb\"}"  # default is an empty dict '{}'
 Sx = 896
 Sy = 896
-resize = true
 binarize = true
+resize = true
 dilation = 1
 epochs = 1
 batch = 1
@@ -39,40 +18,44 @@ threshold = 0.01
 
 [Voxels]
 upstream_mask = "Segmentation2D"
-upstream_colmap = "Colmap"
-use_colmap_poses = true
-voxel_size = 1.0
+use_colmap_poses = false
+voxel_size = 0.3
 type = "averaging"
-log = false  # default to true
+log = false # default to true
 invert = false
 labels = "[\"background\"]"
 
 [PointCloud]
 upstream_task = "Voxels"
-level_set_value = 0.5  # default to 1.0
+level_set_value = 0.5 # default to 1.0
 log = false
 background_prior= 1.0
 min_contrast = 10.0
-min_score = 0.01  # default to 0.2
+min_score = 0.01 # default to 0.2
 
 [SegmentedPointCloud]
 upstream_segmentation = "Segmentation2D"
 upstream_task = "PointCloud"
-use_colmap_poses = true
+use_colmap_poses = false
 
 [ClusteredMesh]
 upstream_task = "SegmentedPointCloud"
 min_vol = 1.0
 min_length = 10.0
 
+[OrganSegmentation]
+upstream_task = "SegmentedPointCloud"
+eps = 2.0
+min_points = 5
+
 [AnglesAndInternodes]
-upstream_task = "ClusteredMesh"
+upstream_task = "OrganSegmentation"
 characteristic_length = 1.0
 organ_type = "fruit"
 stem_axis = 2
 stem_axis_inverted = false
 min_elongation_ratio = 2.0
-min_fruit_size = 6
+min_fruit_size = 0.1
 
 [Visualization]
 upstream_point_cloud = "PointCloud"
