--- a/config/geom_pipe_real.toml
+++ b/config/geom_pipe_real.toml
@@ -5,45 +5,42 @@ compute_dense = false
 align_pcd = true
 calibration_scan_id = ""
 
-[Colmap.cli_args.feature_extractor]
-"--ImageReader.single_camera" = "1"  # in colmap default to 0
+  [Colmap.cli_args.feature_extractor]
+  "--ImageReader.single_camera" = "1" # in colmap default to 0
+  "--SiftExtraction.use_gpu" = "1"
 
-[Colmap.cli_args.model_aligner]
-"--robust_alignment_max_error" = "10"
+  [Colmap.cli_args.exhaustive_matcher]
+  "--SiftMatching.use_gpu" = "1"
 
-[Colmap.bounding_box]  # default to None
-x = [250, 550]
-y = [250, 550]
-z = [-200, 200]
+  [Colmap.cli_args.model_aligner]
+  "--robust_alignment_max_error" = "10"
+
+  # [Colmap.bounding_box] # default to None
+  # x = [150, 650]
+  # y = [150, 650]
+  # z = [-90, 300]
 
 [Undistorted]
 upstream_task = "ImagesFilesetExists"
 
 [Masks]
-upstream_task = "Undistorted"  # other option "ImagesFilesetExists"
+upstream_task = "Undistorted"
 type = "linear"
-parameters = "[0,1,0]"
-dilation = 5  # default to 0
+parameters = "[0, 1, 0]"
+dilation = 2 # default to 0
 binarize = true
-threshold = 0.3
+threshold = 0.2
 
 [Voxels]
 upstream_mask = "Masks"
 upstream_colmap = "Colmap"
 use_colmap_poses = true
-voxel_size = 1.0
+voxel_size = 0.5
 type = "carving"
-log = false  # default to true
-invert = false
-labels = "[]"
 
 [PointCloud]
 upstream_task = "Voxels"
-level_set_value = 1.0
-log = false
-background_prior = -200  # default 1.0
-min_contrast = 10.0
-min_score = 0.2
+level_set_value = 0.0
 
 [TriangleMesh]
 upstream_task = "PointCloud"
