--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -25,19 +25,19 @@ jobs:
             cd docker/
             ./run.sh -t ${{ github.sha }} --unittest_cmd
 
-    feature-tests:
+    integration-tests:
        runs-on: self-hosted
        needs: docker-build
         
        steps:
-        - name: Run Feature Tests
+        - name: Run Integration Tests
           run: |
            cd docker/ 
-           ./run.sh -v /home/${USER}/ML_models:/home/${USER}/romiscan/tests/testdata/models/models -t ${{ github.sha }} --pipeline_test
+           ./run.sh -v /home/${USER}/ML_models:/home/${USER}/romiscan/tests/testdata/models/models -t ${{ github.sha }} --integrationtest_cmd
 
     docker-clean:
        runs-on: self-hosted
-       needs: [feature-tests, unit-tests]
+       needs: [integration-tests, unit-tests]
        if: always()
 
        steps:
