--- a/config/geom_pipe_full.toml
+++ b/config/geom_pipe_full.toml
@@ -51,7 +51,7 @@ min_score = 0.2
 
 [TriangleMesh]
 upstream_task = "PointCloud"
-library = "open3d"
+library = "open3d" # or "cgal"
 filtering = "most connected triangles"  # ["", "most connected triangles", "largest connected triangles", "dbscan point-cloud"]
 
 [CurveSkeleton]
