--- a/config/geom_pipe_real.toml
+++ b/config/geom_pipe_real.toml
@@ -25,6 +25,7 @@ upstream_task = "ImagesFilesetExists"
 
 [Masks]
 upstream_task = "Undistorted"
+query = "{\"channel\":\"rgb\"}"
 type = "linear"
 parameters = "[0, 1, 0]"
 dilation = 5 # default to 0
