--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
-# pywavefront  # Changed to optional as only used in romiscan/romiscan/tasks/evaluation.py
-# trimesh  # Changed to optional as only used once in romiscan/romiscan/tasks/evaluation.py
+pywavefront
+trimesh
 appdirs
 colorlog
 cython
