--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -36,7 +36,7 @@ jobs:
        steps:
         - name: Run Integration Tests
           run: |
-           ./docker/run.sh -v /home/${USER}/ML_models:/home/${USER}/romiscan/tests/testdata/models/models -t ${GITHUB_REF##*/} --integrationtest_cmd
+           ./docker/run.sh -v /home/${USER}/ML_models:/home/${USER}/plant-3d-vision/tests/testdata/models/models -t ${GITHUB_REF##*/} --integrationtest_cmd
 
     docker-clean:
        runs-on: self-hosted
@@ -46,4 +46,4 @@ jobs:
        steps:
         - name: Remove Docker Image
           run: |
-            docker image rm romiscan:${GITHUB_REF##*/}
+            docker image rm plant3dvision:${GITHUB_REF##*/}
