--- a/.gitmodules
+++ b/.gitmodules
@@ -5,7 +5,7 @@
 	path = romiseg
 	url = https://github.com/romi/romiseg.git
 [submodule "romiscanner"]
-	path = romiscanner
+	path = plant-imager
 	url = https://github.com/romi/romiscanner.git
 [submodule "romicgal"]
 	path = romicgal
