Adding a section of Segmented PointCloud Evaluation in config file

--- a/config/ml_pipe_virtual.toml
+++ b/config/ml_pipe_virtual.toml
@@ -86,5 +86,10 @@ upstream_task = "Segmentation2D"
 labels = "[\"flower\", \"fruit\", \"leaf\", \"pedicel\", \"stem\"]"
 dilation_amount = 0
 
+## SegmentedPointCloud
+[SegmentedPointCloudEvaluation]
+upstream_task = "SegmentedPointCloud"
+ground_truth = "PointCloudGroundTruth"
+
 [Clean]
 no_confirm = true
