Adding appropriate parameters to Visualize Virtual datasets

--- a/config/ml_pipe_virtual.toml
+++ b/config/ml_pipe_virtual.toml
@@ -64,6 +64,8 @@ upstream_colmap = "Colmap"
 upstream_angles = "AnglesAndInternodes"
 upstream_skeleton = "CurveSkeleton"
 upstream_images = "ImagesFilesetExists"
+query = "{\"channel\":\"rgb\"}"  # default is an empty dict '{}'
+use_colmap_poses = false
 max_image_size = 1500
 max_point_cloud_size = 10000
 thumbnail_size = 150
