--- a/config/geom_pipe_virtual.toml
+++ b/config/geom_pipe_virtual.toml
@@ -35,6 +35,10 @@ upstream_task = "TreeGraph"
 characteristic_length = 1.0
 stem_axis_inverted = false
 
+[Visualization]
+use_colmap_poses = false
+query = "{\"channel\":\"rgb\"}"  # default is an empty dict '{}'
+
 ### Evaluation ####
 
 ## PointCloud
