Visualization tasks need VirtualPlantObj to retrieve angles and internodes gt

--- a/config/ml_pipe_virtual.toml
+++ b/config/ml_pipe_virtual.toml
@@ -66,6 +66,7 @@ upstream_skeleton = "CurveSkeleton"
 upstream_images = "ImagesFilesetExists"
 query = "{\"channel\":\"rgb\"}"  # default is an empty dict '{}'
 use_colmap_poses = false
+upstream_virtualplantobj = "VirtualPlantObj"
 max_image_size = 1500
 max_point_cloud_size = 10000
 thumbnail_size = 150
