--- a/config/geom_pipe_virtual.toml
+++ b/config/geom_pipe_virtual.toml
@@ -37,6 +37,7 @@ stem_axis_inverted = false
 
 [Visualization]
 use_colmap_poses = false
+upstream_virtualplantobj = "VirtualPlantObj"
 query = "{\"channel\":\"rgb\"}"  # default is an empty dict '{}'
 
 ### Evaluation ####
