--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,11 @@ pywavefront
 trimesh
 appdirs
 colorlog
-cython
+#cython==0.29.22
 docker
 imageio
 luigi>= 2.8.11
+pandas==1.2.5 # there is a mismatch version with cython inside networkx setup
 networkx
 open3d>= 0.9.0.0  # open3d== 0.9.0.0
 opencv-python== 4.2.0.34
