Cleaner system install instructions

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,11 +14,10 @@ ENV PATH=$PATH:"/home/${USER_NAME}/.local/bin"
 ENV COLMAP_EXE='colmap'
 
 USER root
-RUN apt-get update && apt-get install -y \
-    python3.7 python3.7-dev python3-pip wget emacs-nox && \
+RUN apt-get update && \
+    apt-get install -y python3.7 python3.7-dev python3-pip wget emacs-nox && \
     update-alternatives --install /usr/bin/python python /usr/bin/python3.7 10 && \
-    apt-get update && apt-get install -y --no-install-recommends \
-    ocl-icd-libopencl1 opencl-headers clinfo libjpeg8-dev libffi-dev && \
+    apt-get install -y --no-install-recommends ocl-icd-libopencl1 opencl-headers clinfo libjpeg8-dev libffi-dev && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
     ln -s /usr/lib/x86_64-linux-gnu/libOpenCL.so.1 /usr/lib/libOpenCL.so && \
