--- a/config/ml_pipe_real.toml
+++ b/config/ml_pipe_real.toml
@@ -51,28 +51,25 @@ log = false # default to true
 invert = false
 labels = "[\"background\"]"
 
-[PointCloud]
-upstream_task = "Voxels"
-level_set_value = 0.5 # default to 1.0
-log = false
-background_prior= 1.0
-min_contrast = 10.0
-min_score = 0.01 # default to 0.2
-
 [SegmentedPointCloud]
 upstream_segmentation = "Segmentation2D"
 upstream_task = "PointCloud"
 use_colmap_poses = true
 
-[ClusteredMesh]
+[SelectLongestStem]
 upstream_task = "SegmentedPointCloud"
+
+[ClusteredMesh]
+upstream_task = "SelectLongestStem"
 min_vol = 1.0
 min_length = 10.0
 
 [OrganSegmentation]
-upstream_task = "SegmentedPointCloud"
+upstream_task = "SelectLongestStem"
+clustering_method = "hdbscan"
 eps = 2.0
 min_points = 5
+min_cluster_size = 5
 
 [AnglesAndInternodes]
 upstream_task = "OrganSegmentation"
